--- a/index.html
+++ b/index.html
@@ -7,69 +7,55 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="stylenew.css">
-    <title>Hello, world!</title>
+    <script src="scripts/showlmg.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i" rel="stylesheet" />
   
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-primary">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">DIGS Data Publication</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="Data.html">Data</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="about.html">About</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
-                Dropdown
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">Something else here</a></li>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container">
+          <a class="navbar-brand" href="#!">Andres Studio</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                  <li class="nav-item"><a class="nav-link active" aria-current="page" href="#!">Home</a></li>
+                  <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+                  <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
               </ul>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-            </li>
-          </ul>
-          <form class="d-flex">
-            <input class="form-control mr-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-light" type="submit">Search</button>
-          </form>
-        </div>
+          </div>
       </div>
     </nav>
-    <div class="container-fluid">
-        <h1>Hello, world!</h1>
-        <h3 class="d-none d-md-block"> Welcome to the DIGS Data Publication</h3>
-    </div>
-    <!-- Optional JavaScript; choose one of the two! -->
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <img src="https://cdn.pixabay.com/photo/2018/05/08/08/44/artificial-intelligence-3382507_1280.jpg" style="width:500px;height:350px;">
-    <div class="container">
-      <div class="row">
-        <div class="col">Column</div>
-        <div class="col">Column</div>
-        <div class="w-100"></div>
-        <div class="col">Column</div>
-        <div class="col">Column</div>
+    <header class="py-5 bg-image-full" style="background-image: url('https://source.unsplash.com/wfh8dDlNFOk/1600x900')">
+      <div class="text-center my-5">
+          <img class="img-fluid rounded-circle mb-4" src="https://static.vecteezy.com/system/resources/thumbnails/004/432/888/small/photo-camera-abstract-colorful-drawing-digital-graphics-illustration-of-paints-vector.jpg" alt="..." />
+          <h1 class="text-white fs-3 fw-bolder">Take Photography to Next Level</h1>
+          <p class="text-white-50 mb-0">Book Your Experience now</p>
       </div>
+    </header>
+    <section class="py-5">
+      <div class="container my-5">
+          <div class="row justify-content-center">
+              <div id="paragraph" class="col-lg-6">
+                  <h2></h2>
+                  <p class="lead">Photography is the art of taking pictures with a device called a camera. These pictures can be either stored as a soft copy or they can be printed on photographic papers, into copies called photographs.</p>
+                  <p class="mb-0">Till a few decades ago, photography was an entirely different process of work. This was the way photography was invented. The cameras were all non-digital cameras, that used to have photographic film, and through the camera lens, lighted images used to get exposed on the film.</p>
+              </div>
+          </div>
+      </div>
+      <div style = "position:relative; left:580px; top:2px;">
+        <h5 id="time display"></h5>
+      </div>
+    </section>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <div class="container my-auto" style = "position:relative; left:500px; top:-20px;">
+      <button type="button" class="btn btn-dark " onclick="changeTitle()">Display Current Time</button>
+      <button type="button" class="btn btn-dark " onclick="hideFunction()">Hide Paragraph</button>
     </div>
+
+    <footer class="py-5 bg-dark">
+      <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Andres Studio 2022</p></div>
+    </footer>
   </body>
   
 </html>
