--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
   
   </head>
   <body>
+    <script type="text/javascript">
+    function changeTitle(){
+    let selecteElement = document.getElementById("time display")
+    selecteElement.innerText = new Date()
+    }
+    function hideFunction() { 
+	  document.getElementById("paragraph").style.display="none"; 
+    }
+    </script>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
           <a class="navbar-brand" href="#!">Andres Studio</a>
