--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,12 @@
     <script src="scripts/showlmg.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i" rel="stylesheet" />
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" 
+      integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
+      crossorigin=""/>
+      <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
+      integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
+      crossorigin=""></script>
   
   </head>
   <body>
@@ -20,7 +26,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                   <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">Home</a></li>
-                  <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+                  <li class="nav-item"><a class="nav-link" href="about.html">Gallery</a></li>
               </ul>
           </div>
       </div>
@@ -62,7 +68,28 @@
                 </div>
             </form>
         </div>
+        
     </section>
+
+    <div class="container mt-3">
+        <h1>Studio Address</h1>
+        <div id="map"></div>
+    </div>
+
+    <script type="text/javascript">
+        var latLng = [41.793849, -87.585555];
+        var map = L.map('map').setView(latLng, 16);
+        L.tileLayer('https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token={accessToken}', {
+          attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors, Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
+          maxZoom: 18,
+          id: 'mapbox/streets-v11',
+          tileSize: 512,
+          zoomOffset: -1,
+          accessToken: 'pk.eyJ1IjoiYW5kcmVzeWFuZyIsImEiOiJja3p1bGVtOXg3bnJ4MnduazQ4cGgweGNiIn0.niDEYwNeyxjeKJ5in4F8Dg'
+        }).addTo(map);
+        L.marker(latLng).addTo(map)
+        .bindPopup("<b>Andres<br>Studio</b>").openPopup();
+    </script>
 
 
     <footer class="py-5 bg-dark">
