--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
       </div>
     </section>
 
-    <div class="container-md" id="cards">
+    <div class="container-md">
       <div class="row">
         <div class="col-md-3 mb-3 mb-md-0">
           <img src=web-1.jpg class="image">
